finished arm movement, added mouth movement, and text

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Website</title>
+    <title>Animations</title>
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="stylesheets/animations.css">
     <link rel="stylesheet" href="stylesheets/characters.css">
 </head>
 
 <body>
-    <nav id="navbar">
-        <a class="navlinks" href="#">About</a>
-        <a class="navlinks" href="#">Portfolio</a>
-        <a class="navlinks" href="#">Contact</a>
-    </nav>
-
+   
     <div id="intro-section">
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <!-- Moon talking -->
+        <p id="speech">Take me with you...</p>
+        <p id="sad-speech">oh, ok</p>
+        <!-- Moon's body -->
         <div id="moon">
             <div class="crater">
                 <div class="eye"></div>
@@ -25,8 +29,9 @@
                 <div class="eye"></div>
             </div>
             <div id="smile"></div>
+            <div id="arm"></div>
         </div>
-
+        <!-- Space Ship -->
         <div id="rocket">
             <div id="rocket-top"></div>
             <div id="window"></div>
