added stars and adjusted text positioning

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="stylesheets/animations.css">
     <link rel="stylesheet" href="stylesheets/characters.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 
 <body>
    
     <div id="intro-section">
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
         <div class="stars"></div>
         <div class="stars"></div>
         <div class="stars"></div>
