hobbes I failed you lol

--- a/hobbes.html
+++ b/hobbes.html
@@ -16,21 +16,68 @@
     </nav>
 
     <div id="main-container">
+            <!-- Head -->
+            <div id="ears-container">
+            <div class="ears" id="ear-1"></div>
+            <div class="ears" id="ear-2"></div>
+        </div>
+
+            <div id="head">
+                <div class="head-stripe" id="head-stripe-1"></div>
+                <div class="head-stripe" id="head-stripe-2"></div>
+                <div class="head-stripe" id="head-stripe-3"></div>
+                <div class="head-stripe" id="head-stripe-4"></div>
+
+                <div class="eyes"></div>
+                <div class="eyes"></div>
+
+                <div id="nose"></div>
+                <div class="mouth" id="mouth-1"></div>
+                <div class="mouth" id="mouth-2"></div>
+            </div>
             <!-- Main orange body -->
             <div id="hobbes-body">
 
             <!-- Belly aka white tummy -->
             <div id="belly"></div>
-
-            <!-- Left arm -->
-            <div id="left-arm">
-                <div id="left-hand"></div>
-            </div>
-            <!-- Left Stripes -->
+            <!-- Left Stripes for belly-->
             <div class="stripes-left" id="stripe-1"></div>
             <div class="stripes-left" id="stripe-2"></div>
             <div class="stripes-left" id="stripe-3"></div>
             <div class="stripes-left" id="stripe-4"></div>
+            <div class="stripes-right" id="stripe-5"></div>
+            <div class="stripes-right" id="stripe-6"></div>
+            <div class="stripes-right" id="stripe-7"></div>
+            <div class="stripes-right" id="stripe-8"></div>
+
+            <!-- Left arm -->
+            <div id="left-arm">
+                <div id="left-hand">
+                    <div class="left-arm-stripes" id="left-arm-stripe-1"></div>
+                    <div class="left-arm-stripes" id="left-arm-stripe-2"></div>
+                </div>
+            </div>
+            <!-- Right Arm -->
+            <div id="right-arm">
+                <div id="right-hand">
+                    <div class="right-arm-stripes" id="right-arm-stripe-1"></div>
+                    <div class="right-arm-stripes" id="right-arm-stripe-2"></div>
+                </div>
+            </div>
+            <!-- Left Leg -->
+            <div id="left-leg">
+                <div id="left-foot">
+                    <div class="left-leg-stripes" id="left-leg-stripes-1"></div>
+                    <div class="left-leg-stripes" id="left-leg-stripes-2"></div>
+                </div>
+            </div>
+            <!-- Right Leg -->
+            <div id="right-leg">
+                <div id="right-foot">
+                    <div class="right-leg-stripes" id="right-leg-stripes-1"></div>
+                    <div class="right-leg-stripes" id="right-leg-stripes-2"></div>
+                </div>
+            </div>
     </div>
 </body>
 </html>
